# Prisma-With-Rust

./: .env  Cargo.toml  docker-compose.yml
prisma/: schema.prisma
src/: error.rs  main.rs  prisma.rs
