[package]
name = "prisma-with-rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["prisma-cli"]
resolver = "2"

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
serde = { version = "1.0.206", features = ["derive"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"]}
thiserror = "1.0.63"